--- a/app/src/main/res/layout/activity_donor.xml
+++ b/app/src/main/res/layout/activity_donor.xml
@@ -8,14 +8,14 @@ android:layout_height="match_parent"
 android:paddingLeft="16dp"
 android:paddingRight="16dp"
 android:orientation="vertical"
-tools:context=".DonorActivity"
 android:paddingTop="98dp"
 android:background="#FFC0CB"
+    tools:context=".DonorActivity"
     >
 
 
 <TextView
-    android:id="@+id/textview_second"
+    android:id="@+id/titleInput"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:text="Hii, you can upload your donations here.."
@@ -32,35 +32,57 @@ android:background="#FFC0CB"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent" />
 
+    <Button
+        android:id="@+id/btnChoose"
+        android:text="Choose"
+        android:layout_width="160dp"
+        android:layout_height="60dp"
+        android:drawableRight="@drawable/ic_fileupload"
+
+        android:drawablePadding="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/titleInput"
+         />
+
 <Button
-    android:id="@+id/button_second"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:id="@+id/btnUpload"
+    android:text="Upload"
+
+    android:layout_width="160dp"
+    android:layout_height="60dp"
     android:drawableRight="@drawable/ic_fileupload"
     android:drawablePadding="8dp"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@id/textview_second" />
+
+    app:layout_constraintTop_toBottomOf="@id/titleInput" />
+    <ImageView
+        android:id = "@+id/imageView"
+        android:layout_width = "30dp"
+        android:layout_height = "30dp" />
+
 
 <EditText
-    android:id="@+id/textview_third"
+    android:id="@+id/foodname"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:text="Add your food name here"
+    android:hint="Add your food name here"
     android:textSize="16sp"
     android:typeface="sans"
-    app:layout_constraintBottom_toTopOf="@+id/button_second"
+    app:layout_constraintBottom_toTopOf="@+id/btnUpload"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.498"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintVertical_bias="0.88" />
 <EditText
-    android:id="@+id/textview_fourth"
+    android:id="@+id/fooddesc"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:text="Add your food description"
+    android:hint="Add your food description here"
     android:textSize="16sp"
     android:typeface="sans"
     app:layout_constraintBottom_toTopOf="@+id/button_second"
@@ -69,6 +91,12 @@ android:background="#FFC0CB"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintVertical_bias="0.88" />
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/btn"
+        android:layout_centerInParent="true"
+        android:text="GET LOCATION" />
 
 
 
